Add some crap so we can build Volley with ADT.
Change-Id: If7f2ab67eb727ac4840cab1cc47dd3d059a116d2

--- a/volley/tests/AndroidManifest.xml
+++ b/volley/tests/AndroidManifest.xml
@@ -18,11 +18,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.volley.tests">
 
+    <uses-sdk android:minSdkVersion="8" />
+
     <application>
         <uses-library android:name="android.test.runner" />
     </application>
 
     <instrumentation android:name="android.test.InstrumentationTestRunner"
-        android:targetPackage="com.android.volley.tests" />
+        android:targetPackage="com.android.volley" />
 
 </manifest>
