--- a/appcompat/AndroidManifest.xml
+++ b/appcompat/AndroidManifest.xml
@@ -14,6 +14,5 @@
      limitations under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="android.support.appcompat"
-          android:versionCode="1">
+          package="android.support.appcompat">
 </manifest>
