--- a/appcompat/AndroidManifest.xml
+++ b/appcompat/AndroidManifest.xml
@@ -15,4 +15,5 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="android.support.appcompat">
+    <uses-sdk android:minSdkVersion="9" />
 </manifest>
