Generalize support library tests.
Change-Id: I21c828268e7a7e4ca6be5dae7a5ab85789a9a7b5

--- a/tests/AndroidManifest.xml
+++ b/tests/AndroidManifest.xml
@@ -15,7 +15,7 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="android.support.v4.content.tests">
+    package="android.support.tests">
 
     <application>
         <uses-library android:name="android.test.runner" />
@@ -33,6 +33,6 @@
 
     <instrumentation
         android:name="android.test.InstrumentationTestRunner"
-        android:targetPackage="android.support.v4.content.tests" />
+        android:targetPackage="android.support.tests" />
 
 </manifest>
