--- a/fragment/integration-tests/testapp/build.gradle
+++ b/fragment/integration-tests/testapp/build.gradle
@@ -26,7 +26,8 @@ android {
     sourceSets {
         main {
             res.srcDirs = ['src/main/res',
-                           'src/main/res/layouts/doubleTransitionBug'
+                           'src/main/res/layouts/doubleTransitionBug',
+                           'src/main/res/layouts/kittenFragmentTransitions'
             ]
         }
     }
@@ -36,6 +37,7 @@ dependencies {
     implementation(KOTLIN_STDLIB)
     implementation(project(":fragment:fragment-ktx"))
     implementation 'androidx.transition:transition:1.3.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 }
 
 tasks['check'].dependsOn(tasks['connectedCheck'])
