--- a/fragment/integration-tests/testapp/src/main/AndroidManifest.xml
+++ b/fragment/integration-tests/testapp/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".doubleTransitionBug.DoubleTransitionBugActivity"/>
+        <activity android:name=".kittenfragmenttransitions.KittenTransitionMainActivity"/>
     </application>
 
 </manifest>
