Support background tinting on AppCompatToggleButton
Align with the rest of AppCompat widgets. Add a new screen
in the demo app and test coverage.

Also add @Nullable annotation to all overriden setBackgroundDrawable
methods.

Test: ./gradlew appcompat:appcompat:connectedCheck --info --daemon -Pandroid.testInstrumentationRunnerArguments.class=androidx.appcompat.widget.AppCompatToggleButtonTest
Bug: 157676005
Change-Id: I678df300077418a4eead99ab83e89840f532a4f8

--- a/samples/Support7Demos/src/main/AndroidManifest.xml
+++ b/samples/Support7Demos/src/main/AndroidManifest.xml
@@ -289,6 +289,15 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".app.AppCompatWidgetsToggleButtons"
+            android:label="@string/appcompat_widgets_toggle_buttons"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="com.example.android.supportv7.SAMPLE_CODE" />
+            </intent-filter>
+        </activity>
+
         <activity android:name=".app.MenuItemIconTinting"
                   android:label="@string/menu_item_icon_tinting"
                   android:theme="@style/Theme.Custom.NoActionBar">
