--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.configureondemand=true
 org.gradle.parallel=true
 org.gradle.caching=true
 android.builder.sdkDownload=false
-android.uniquePackageNames=true
+android.uniquePackageNames=false
 android.enableAdditionalTestOutput=true
 android.useAndroidX=true
 # Run multiple kotlin compilations in parallel within the same project.
