Watch face: Add proguard rule to keep Parcelizer classes
Bug: 174817013
Test: N/A
Change-Id: I1e9a8ee1f7ad6e60c1fb065b01084ba5077b8a1e

--- a/wear/wear-watchface-data/build.gradle
+++ b/wear/wear-watchface-data/build.gradle
@@ -48,6 +48,10 @@ android {
     buildFeatures {
         aidl = true
     }
+
+    buildTypes.all {
+        consumerProguardFiles 'proguard-rules.pro'
+    }
 }
 
 androidx {
