Add the camera-camera2-pipe-testing project.
This creates an artifact to share test runners and fake objects that
can be shared between other artifacts that use the CameraPipe library.

- Created camera/camera-camera2-pipe-testing/ package.
- Migrate FakeMetadata.kt and tests
- Migrate CameraPipeRobolectricTestRunner.kt and tests
- Update dependencies for the camera/camera-camera2-pipe package.

Test: ./gradlew :camera:camera-camera2-pipe:test
      ./gradlew :camera:camera-camera2-pipe:ktlint
Test: ./gradlew :camera:camera-camera2-pipe-testing:test
      ./gradlew :camera:camera-camera2-pipe-testing:ktlint

Change-Id: Ieb709efcd8031c9f2452f7a8be36daa5d72e71c4

--- a/camera/camera-camera2-pipe/build.gradle
+++ b/camera/camera-camera2-pipe/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     testImplementation(TRUTH)
     testImplementation(ROBOLECTRIC)
     testImplementation(KOTLIN_COROUTINES_TEST)
+    testImplementation(project(":camera:camera-camera2-pipe-testing"))
 
     kaptTest(DAGGER_COMPILER)
 
