Extract ExifData from ImageInfo
 Adds ability to retrieve exif information from ImageInfo and put it
 into an ExifData.Builder.

 This will be used to generate software encoded JPEGs in ImageCapture

Bug: 159831206
Test: ./gradlew connectedCheck on 'heroqltevzw' (device affected by bug)
Change-Id: I8401816812103701260675c5aaa28b5b6c34722a

--- a/camera/camera-camera2/build.gradle
+++ b/camera/camera-camera2/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     androidTestImplementation(project(":annotation:annotation-experimental"))
     androidTestImplementation(project(":internal-testutils-truth"))
     androidTestImplementation("org.jetbrains.kotlinx:atomicfu:0.15.0")
+    androidTestImplementation("androidx.exifinterface:exifinterface:1.0.0")
 }
 android {
     defaultConfig {
