Run TypeAdapterStore tests with KSP
This CL has the first integration of KSP tests into room-compiler tests.
The first coversion happens in TypeAdapterStore test.

To make them pass with KSP, we need to start setting nullability properly
in adapters. I've only updated the ones that are necessary to pass the
tests, we'll need to do more but I want to add tests for them before
making the changes (e.g. enum adapter).
This should not have any impact on java processing pipeline as it
ignores nullability in equality etc.

Bug: 160322705
Test: TypeAdapterStoreTest
Change-Id: Ic3a572e422fc59489d41daf90178bb50280f1af6

--- a/room/compiler-processing-testing/build.gradle
+++ b/room/compiler-processing-testing/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     api(project(":room:room-compiler-processing"))
     implementation(KOTLIN_STDLIB)
     implementation(KOTLIN_KSP_API)
-    testImplementation(KOTLIN_KSP)
+    implementation(KOTLIN_KSP)
     implementation(GOOGLE_COMPILE_TESTING)
     implementation(KOTLIN_COMPILE_TESTING_KSP)
 }
