Add initial tracing to ComponentActivity.reportFullyDrawn
Test: Tests in 'androidx.activity'
Test: AppStartupHelperTest (with manual change to Component activity + manual tracing)
Relnote: "Add tracing to ComponentActivity.reportFullyDrawn"
Bug: 172604392

Once S is API stable, we can also set a max API for this tracing
behavior.

Change-Id: Ic7632bef49a1440843cba550b1da27736d5abe41

--- a/activity/activity/build.gradle
+++ b/activity/activity/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     api(projectOrArtifact(":lifecycle:lifecycle-viewmodel"))
     api(projectOrArtifact(":savedstate:savedstate"))
     api(projectOrArtifact(":lifecycle:lifecycle-viewmodel-savedstate"))
+    implementation("androidx.tracing:tracing:1.0.0")
 
     androidTestImplementation(projectOrArtifact(":lifecycle:lifecycle-runtime-testing"))
     androidTestImplementation(KOTLIN_STDLIB)
