--- a/room/compiler-processing/build.gradle
+++ b/room/compiler-processing/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation(KOTLIN_METADATA_JVM)
     implementation(INTELLIJ_ANNOTATIONS)
     implementation(KOTLIN_KSP_API)
+    implementation(KOTLIN_STDLIB_JDK8) // KSP defines older version as dependency, force update.
 
     testImplementation(GOOGLE_COMPILE_TESTING)
     testImplementation(JUNIT)
