Support for high priority (immediate) WorkRequests.
* Introduces the new setImmedaite() API in `WorkRequest` and marks it @Experimental.
* Introduces a `getForegroundInfoAsync()` in ListenableFuture and a suspending version in `CoroutineWorker`.
* Completes the backwards-compatibility story for API <= R.

Bug: b/171456542
Test: Added unit tests and integration tests.
Relnote: Support for immediate jobs / foreground service support in S and above.
Change-Id: I6a3d7756aec210d0576a40cb93708c533a92441f

--- a/work/workmanager/build.gradle
+++ b/work/workmanager/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     androidTestImplementation("androidx.room:room-testing:2.2.5")
     implementation("androidx.sqlite:sqlite:2.1.0")
     implementation("androidx.sqlite:sqlite-framework:2.1.0")
+    api("androidx.annotation:annotation-experimental:1.0.0")
     api(GUAVA_LISTENABLE_FUTURE)
     api("androidx.lifecycle:lifecycle-livedata:2.1.0")
     implementation("androidx.core:core:1.1.0")
