Update KSP dependency to 20201204
This version is important because it also moves KSP's
kotlin dependency to 1.4.20.

I had to specify more versions for testing because we were
getting kotlin compiler dependencies from kotlin compile
testing, which is still on 1.4.10. Now compiler-processing-testing
artifact explicitly specifies those version to match whatever
AndroidX is using.

I've also removed workarounds for the following issues
as they are fixed.

https://github.com/google/ksp/issues/170
https://github.com/google/ksp/issues/174

Bug: 160322705
Test: existing tests
Change-Id: If948bcb762d1fad4911cf833a85cda6a36e7c787

--- a/room/compiler-processing-testing/build.gradle
+++ b/room/compiler-processing-testing/build.gradle
@@ -32,6 +32,12 @@ dependencies {
     implementation(KOTLIN_KSP)
     implementation(GOOGLE_COMPILE_TESTING)
     implementation(KOTLIN_COMPILE_TESTING_KSP)
+    // specify these because KSP do not specify them and we might get an older version from kotlin
+    // compile testing
+    // https://github.com/google/ksp/issues/187
+    implementation(KOTLIN_COMPILER_EMBEDDABLE)
+    implementation(KOTLIN_COMPILER_DAEMON_EMBEDDABLE)
+    implementation(KOTLIN_ANNOTATION_PROCESSING_EMBEDDABLE)
 }
 
 androidx {
