Fix direct transition from VIEW_CREATED to CREATED
When a fragment is replaced before the FragmentManager
has reached the ACTIVITY_CREATED state, it can transition
directly from the VIEW_CREATED state (i.e., having
`onViewCreated()` called on it) to the CREATED state which
should trigger `onDestroyView()` and the removal of
the fragment's view from the view hierarchy.

By ensuring that the createView() and destroyFragmentView()
calls are symmetric in moveToExpectedState(), we can
avoid cases where onDestroyView() is skipped and avoid
cases where the previous fragment's view is still in the
view hierarchy.

Additional logic has been added to StrictFragment and
StrictViewFragment to take into account this transition
edge.

Test: new FragmentReplaceTest passes
BUG: 168987859
Relnote: "Fixed an issue where the fragment's view would
remain in the view hierarchy if it was replaced during
its `onCreate()` or `onViewCreated()` methods."

Change-Id: I8a7d5aed2c5648d3b898bb1cc1469f90cf5f1abd

--- a/fragment/fragment/src/androidTest/AndroidManifest.xml
+++ b/fragment/fragment/src/androidTest/AndroidManifest.xml
@@ -48,6 +48,7 @@
         <activity android:name="androidx.fragment.app.FragmentSavedStateActivity" />
         <activity android:name="androidx.fragment.app.FragmentFinishEarlyTestActivity" />
         <activity android:name="androidx.fragment.app.SimpleContainerActivity" />
+        <activity android:name="androidx.fragment.app.ReplaceInCreateActivity" />
         <activity android:name="androidx.fragment.app.DialogActivity"
                   android:theme="@style/DialogTheme"/>
         <activity android:name="androidx.fragment.app.TestAppCompatActivity"
