--- a/room/settings.gradle
+++ b/room/settings.gradle
@@ -21,5 +21,6 @@ setupPlayground(this, "..")
 selectProjectsFromAndroidX({ name ->
     if (name.startsWith(":room")) return true
     if (name.startsWith(":sqlite") && !name.contains("inspection")) return true
+    if (name == ":internal-testutils-truth") return true
     return false
 })
