--- a/docs-public/build.gradle
+++ b/docs-public/build.gradle
@@ -4,8 +4,8 @@ plugins {
 }
 
 dependencies {
-    docs("androidx.activity:activity:1.2.0-beta02")
-    docs("androidx.activity:activity-ktx:1.2.0-beta02")
+    docs("androidx.activity:activity:1.2.0-rc01")
+    docs("androidx.activity:activity-ktx:1.2.0-rc01")
     docs("androidx.ads:ads-identifier:1.0.0-alpha04")
     docs("androidx.ads:ads-identifier-provider:1.0.0-alpha04")
     docs("androidx.annotation:annotation:1.2.0-alpha01")
@@ -22,53 +22,55 @@ dependencies {
     docs("androidx.biometric:biometric:1.2.0-alpha01")
     docs("androidx.biometric:biometric-ktx:1.2.0-alpha01")
     docs("androidx.browser:browser:1.3.0")
-    docs("androidx.camera:camera-camera2:1.0.0-beta12")
-    docs("androidx.camera:camera-core:1.0.0-beta12")
-    docs("androidx.camera:camera-extensions:1.0.0-alpha19")
+    docs("androidx.camera:camera-camera2:1.0.0-rc01")
+    docs("androidx.camera:camera-core:1.0.0-rc01")
+    docs("androidx.camera:camera-extensions:1.0.0-alpha20")
     stubs(fileTree(dir: '../camera/camera-extensions-stub', include: ['camera-extensions-stub.jar']))
-    docs("androidx.camera:camera-lifecycle:1.0.0-beta12")
-    docs("androidx.camera:camera-view:1.0.0-alpha19")
+    docs("androidx.camera:camera-lifecycle:1.0.0-rc01")
+    docs("androidx.camera:camera-view:1.0.0-alpha20")
     docs("androidx.cardview:cardview:1.0.0")
-    docs("androidx.collection:collection:1.1.0")
-    docs("androidx.collection:collection-ktx:1.1.0")
-    docs("androidx.compose.animation:animation:1.0.0-alpha08")
-    docs("androidx.compose.animation:animation-core:1.0.0-alpha08")
-    samples("androidx.compose.animation:animation-samples:1.0.0-alpha08")
-    samples("androidx.compose.animation:animation-core-samples:1.0.0-alpha08")
-    docs("androidx.compose.foundation:foundation:1.0.0-alpha08")
-    docs("androidx.compose.foundation:foundation-layout:1.0.0-alpha08")
-    samples("androidx.compose.foundation:foundation-layout-samples:1.0.0-alpha08")
-    samples("androidx.compose.foundation:foundation-samples:1.0.0-alpha08")
-    docs("androidx.compose.material:material:1.0.0-alpha08")
-    docs("androidx.compose.material:material-icons-core:1.0.0-alpha08")
-    samples("androidx.compose.material:material-icons-core-samples:1.0.0-alpha08")
-    docs("androidx.compose.material:material-icons-extended:1.0.0-alpha08")
-    samples("androidx.compose.material:material-samples:1.0.0-alpha08")
-    docs("androidx.compose.runtime:runtime:1.0.0-alpha08")
-    docs("androidx.compose.runtime:runtime-dispatch:1.0.0-alpha08")
-    docs("androidx.compose.runtime:runtime-livedata:1.0.0-alpha08")
-    samples("androidx.compose.runtime:runtime-livedata-samples:1.0.0-alpha08")
-    docs("androidx.compose.runtime:runtime-rxjava2:1.0.0-alpha08")
-    samples("androidx.compose.runtime:runtime-rxjava2-samples:1.0.0-alpha08")
-    docs("androidx.compose.runtime:runtime-rxjava3:1.0.0-alpha08")
-    docs("androidx.compose.runtime:runtime-saved-instance-state:1.0.0-alpha08")
-    samples("androidx.compose.runtime:runtime-saved-instance-state-samples:1.0.0-alpha08")
-    samples("androidx.compose.runtime:runtime-samples:1.0.0-alpha08")
-    docs("androidx.compose.ui:ui:1.0.0-alpha08")
-    docs("androidx.compose.ui:ui-geometry:1.0.0-alpha08")
-    docs("androidx.compose.ui:ui-graphics:1.0.0-alpha08")
-    samples("androidx.compose.ui:ui-graphics-samples:1.0.0-alpha08")
-    docs("androidx.compose.ui:ui-test:1.0.0-alpha08")
-    docs("androidx.compose.ui:ui-test-junit4:1.0.0-alpha08")
-    docs("androidx.compose.ui:ui-text:1.0.0-alpha08")
+    docs("androidx.collection:collection:1.2.0-alpha01")
+    docs("androidx.collection:collection-ktx:1.2.0-alpha01")
+    docs("androidx.compose.animation:animation:1.0.0-alpha09")
+    docs("androidx.compose.animation:animation-core:1.0.0-alpha09")
+    samples("androidx.compose.animation:animation-samples:1.0.0-alpha09")
+    samples("androidx.compose.animation:animation-core-samples:1.0.0-alpha09")
+    docs("androidx.compose.foundation:foundation:1.0.0-alpha09")
+    docs("androidx.compose.foundation:foundation-layout:1.0.0-alpha09")
+    samples("androidx.compose.foundation:foundation-layout-samples:1.0.0-alpha09")
+    samples("androidx.compose.foundation:foundation-samples:1.0.0-alpha09")
+    docs("androidx.compose.material:material:1.0.0-alpha09")
+    docs("androidx.compose.material:material-icons-core:1.0.0-alpha09")
+    samples("androidx.compose.material:material-icons-core-samples:1.0.0-alpha09")
+    docs("androidx.compose.material:material-icons-extended:1.0.0-alpha09")
+    samples("androidx.compose.material:material-samples:1.0.0-alpha09")
+    docs("androidx.compose.runtime:runtime:1.0.0-alpha09")
+    docs("androidx.compose.runtime:runtime-dispatch:1.0.0-alpha09")
+    docs("androidx.compose.runtime:runtime-livedata:1.0.0-alpha09")
+    samples("androidx.compose.runtime:runtime-livedata-samples:1.0.0-alpha09")
+    docs("androidx.compose.runtime:runtime-rxjava2:1.0.0-alpha09")
+    samples("androidx.compose.runtime:runtime-rxjava2-samples:1.0.0-alpha09")
+    docs("androidx.compose.runtime:runtime-rxjava3:1.0.0-alpha09")
+    samples("androidx.compose.runtime:runtime-rxjava3-samples:1.0.0-alpha09")
+    docs("androidx.compose.runtime:runtime-saved-instance-state:1.0.0-alpha09")
+    samples("androidx.compose.runtime:runtime-saved-instance-state-samples:1.0.0-alpha09")
+    samples("androidx.compose.runtime:runtime-samples:1.0.0-alpha09")
+    docs("androidx.compose.ui:ui:1.0.0-alpha09")
+    docs("androidx.compose.ui:ui-geometry:1.0.0-alpha09")
+    docs("androidx.compose.ui:ui-graphics:1.0.0-alpha09")
+    samples("androidx.compose.ui:ui-graphics-samples:1.0.0-alpha09")
+    docs("androidx.compose.ui:ui-test:1.0.0-alpha09")
+    docs("androidx.compose.ui:ui-test-junit4:1.0.0-alpha09")
+    docs("androidx.compose.ui:ui-text:1.0.0-alpha09")
     docs("androidx.compose.ui:ui-text-android:1.0.0-alpha06")
-    samples("androidx.compose.ui:ui-text-samples:1.0.0-alpha08")
-    docs("androidx.compose.ui:ui-unit:1.0.0-alpha08")
-    samples("androidx.compose.ui:ui-unit-samples:1.0.0-alpha08")
-    docs("androidx.compose.ui:ui-util:1.0.0-alpha08")
-    docs("androidx.compose.ui:ui-viewbinding:1.0.0-alpha08")
-    samples("androidx.compose.ui:ui-viewbinding-samples:1.0.0-alpha08")
-    samples("androidx.compose.ui:ui-samples:1.0.0-alpha08")
+    samples("androidx.compose.ui:ui-text-samples:1.0.0-alpha09")
+    docs("androidx.compose.ui:ui-tooling:1.0.0-alpha09")
+    docs("androidx.compose.ui:ui-unit:1.0.0-alpha09")
+    samples("androidx.compose.ui:ui-unit-samples:1.0.0-alpha09")
+    docs("androidx.compose.ui:ui-util:1.0.0-alpha09")
+    docs("androidx.compose.ui:ui-viewbinding:1.0.0-alpha09")
+    samples("androidx.compose.ui:ui-viewbinding-samples:1.0.0-alpha09")
+    samples("androidx.compose.ui:ui-samples:1.0.0-alpha09")
     docs("androidx.concurrent:concurrent-futures:1.1.0")
     docs("androidx.concurrent:concurrent-futures-ktx:1.1.0")
     docs("androidx.contentpager:contentpager:1.0.0")
@@ -94,9 +96,9 @@ dependencies {
     docs("androidx.enterprise:enterprise-feedback:1.1.0-rc01")
     docs("androidx.enterprise:enterprise-feedback-testing:1.1.0-rc01")
     docs("androidx.exifinterface:exifinterface:1.3.2")
-    docs("androidx.fragment:fragment:1.3.0-beta01")
-    docs("androidx.fragment:fragment-ktx:1.3.0-beta01")
-    docs("androidx.fragment:fragment-testing:1.3.0-beta01")
+    docs("androidx.fragment:fragment:1.3.0-rc01")
+    docs("androidx.fragment:fragment-ktx:1.3.0-rc01")
+    docs("androidx.fragment:fragment-testing:1.3.0-rc01")
     docs("androidx.gridlayout:gridlayout:1.0.0")
     docs("androidx.heifwriter:heifwriter:1.1.0-alpha01")
     docs("androidx.hilt:hilt-common:1.0.0-alpha02")
@@ -107,33 +109,33 @@ dependencies {
     docs("androidx.leanback:leanback-paging:1.1.0-alpha06")
     docs("androidx.leanback:leanback-preference:1.1.0-beta01")
     docs("androidx.leanback:leanback-tab:1.1.0-beta01")
-    docs("androidx.lifecycle:lifecycle-common:2.3.0-beta01")
-    docs("androidx.lifecycle:lifecycle-common-java8:2.3.0-beta01")
+    docs("androidx.lifecycle:lifecycle-common:2.3.0-rc01")
+    docs("androidx.lifecycle:lifecycle-common-java8:2.3.0-rc01")
     docs("androidx.lifecycle:lifecycle-extensions:2.2.0")
-    docs("androidx.lifecycle:lifecycle-livedata:2.3.0-beta01")
-    docs("androidx.lifecycle:lifecycle-livedata-core:2.3.0-beta01")
-    docs("androidx.lifecycle:lifecycle-livedata-core-ktx:2.3.0-beta01")
-    docs("androidx.lifecycle:lifecycle-livedata-ktx:2.3.0-beta01")
-    docs("androidx.lifecycle:lifecycle-process:2.3.0-beta01")
-    docs("androidx.lifecycle:lifecycle-reactivestreams:2.3.0-beta01")
-    docs("androidx.lifecycle:lifecycle-reactivestreams-ktx:2.3.0-beta01")
-    docs("androidx.lifecycle:lifecycle-runtime:2.3.0-beta01")
-    docs("androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-beta01")
-    docs("androidx.lifecycle:lifecycle-service:2.3.0-beta01")
-    docs("androidx.lifecycle:lifecycle-viewmodel:2.3.0-beta01")
-    docs("androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0-beta01")
-    docs("androidx.lifecycle:lifecycle-viewmodel-savedstate:2.3.0-beta01")
+    docs("androidx.lifecycle:lifecycle-livedata:2.3.0-rc01")
+    docs("androidx.lifecycle:lifecycle-livedata-core:2.3.0-rc01")
+    docs("androidx.lifecycle:lifecycle-livedata-core-ktx:2.3.0-rc01")
+    docs("androidx.lifecycle:lifecycle-livedata-ktx:2.3.0-rc01")
+    docs("androidx.lifecycle:lifecycle-process:2.3.0-rc01")
+    docs("androidx.lifecycle:lifecycle-reactivestreams:2.3.0-rc01")
+    docs("androidx.lifecycle:lifecycle-reactivestreams-ktx:2.3.0-rc01")
+    docs("androidx.lifecycle:lifecycle-runtime:2.3.0-rc01")
+    docs("androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-rc01")
+    docs("androidx.lifecycle:lifecycle-service:2.3.0-rc01")
+    docs("androidx.lifecycle:lifecycle-viewmodel:2.3.0-rc01")
+    docs("androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0-rc01")
+    docs("androidx.lifecycle:lifecycle-viewmodel-savedstate:2.3.0-rc01")
     docs("androidx.loader:loader:1.1.0")
     docs("androidx.localbroadcastmanager:localbroadcastmanager:1.1.0-alpha01")
-    docs("androidx.media2:media2-common:1.1.0")
-    docs("androidx.media2:media2-player:1.1.0")
-    docs("androidx.media2:media2-session:1.1.0")
-    docs("androidx.media2:media2-widget:1.1.0")
+    docs("androidx.media2:media2-common:1.1.1")
+    docs("androidx.media2:media2-player:1.1.1")
+    docs("androidx.media2:media2-session:1.1.1")
+    docs("androidx.media2:media2-widget:1.1.1")
     docs("androidx.media:media:1.2.1")
     docs("androidx.mediarouter:mediarouter:1.2.0")
     docs("androidx.navigation:navigation-common:2.3.2")
     docs("androidx.navigation:navigation-common-ktx:2.3.2")
-    docs("androidx.navigation:navigation-compose:1.0.0-alpha03")
+    docs("androidx.navigation:navigation-compose:1.0.0-alpha04")
     samples("androidx.navigation:navigation-compose-samples:1.0.0-alpha01")
     docs("androidx.navigation:navigation-dynamic-features-fragment:2.3.2")
     docs("androidx.navigation:navigation-dynamic-features-runtime:2.3.2")
@@ -144,17 +146,17 @@ dependencies {
     docs("androidx.navigation:navigation-testing:2.3.2")
     docs("androidx.navigation:navigation-ui:2.3.2")
     docs("androidx.navigation:navigation-ui-ktx:2.3.2")
-    docs("androidx.paging:paging-common:3.0.0-alpha10")
-    docs("androidx.paging:paging-common-ktx:3.0.0-alpha10")
-    docs("androidx.paging:paging-compose:1.0.0-alpha03")
+    docs("androidx.paging:paging-common:3.0.0-alpha11")
+    docs("androidx.paging:paging-common-ktx:3.0.0-alpha11")
+    docs("androidx.paging:paging-compose:1.0.0-alpha04")
     samples("androidx.paging:paging-compose-samples:3.0.0-alpha08")
-    docs("androidx.paging:paging-guava:3.0.0-alpha10")
-    docs("androidx.paging:paging-runtime:3.0.0-alpha10")
-    docs("androidx.paging:paging-runtime-ktx:3.0.0-alpha10")
-    docs("androidx.paging:paging-rxjava2:3.0.0-alpha10")
-    docs("androidx.paging:paging-rxjava2-ktx:3.0.0-alpha10")
-    docs("androidx.paging:paging-rxjava3:3.0.0-alpha10")
-    samples("androidx.paging:paging-samples:3.0.0-alpha10")
+    docs("androidx.paging:paging-guava:3.0.0-alpha11")
+    docs("androidx.paging:paging-runtime:3.0.0-alpha11")
+    docs("androidx.paging:paging-runtime-ktx:3.0.0-alpha11")
+    docs("androidx.paging:paging-rxjava2:3.0.0-alpha11")
+    docs("androidx.paging:paging-rxjava2-ktx:3.0.0-alpha11")
+    docs("androidx.paging:paging-rxjava3:3.0.0-alpha11")
+    samples("androidx.paging:paging-samples:3.0.0-alpha11")
     docs("androidx.palette:palette:1.0.0")
     docs("androidx.palette:palette-ktx:1.0.0")
     docs("androidx.percentlayout:percentlayout:1.0.1")
@@ -165,15 +167,16 @@ dependencies {
     docs("androidx.recyclerview:recyclerview:1.2.0-beta01")
     docs("androidx.recyclerview:recyclerview-selection:2.0.0-alpha01")
     docs("androidx.remotecallback:remotecallback:1.0.0-alpha02")
-    docs("androidx.room:room-common:2.3.0-alpha03")
-    docs("androidx.room:room-guava:2.3.0-alpha03")
-    docs("androidx.room:room-ktx:2.3.0-alpha03")
-    docs("androidx.room:room-migration:2.3.0-alpha03")
-    docs("androidx.room:room-runtime:2.3.0-alpha03")
-    docs("androidx.room:room-rxjava2:2.3.0-alpha03")
-    docs("androidx.room:room-testing:2.3.0-alpha03")
-    docs("androidx.savedstate:savedstate:1.1.0-beta01")
-    docs("androidx.savedstate:savedstate-ktx:1.1.0-beta01")
+    docs("androidx.room:room-common:2.3.0-alpha04")
+    docs("androidx.room:room-guava:2.3.0-alpha04")
+    docs("androidx.room:room-ktx:2.3.0-alpha04")
+    docs("androidx.room:room-migration:2.3.0-alpha04")
+    docs("androidx.room:room-runtime:2.3.0-alpha04")
+    docs("androidx.room:room-rxjava2:2.3.0-alpha04")
+    docs("androidx.room:room-rxjava3:2.3.0-alpha04")
+    docs("androidx.room:room-testing:2.3.0-alpha04")
+    docs("androidx.savedstate:savedstate:1.1.0-rc01")
+    docs("androidx.savedstate:savedstate-ktx:1.1.0-rc01")
     docs("androidx.security:security-crypto:1.1.0-alpha03")
     docs("androidx.security:security-crypto-ktx:1.1.0-alpha02")
     docs("androidx.security:security-identity-credential:1.0.0-alpha01")
@@ -201,20 +204,20 @@ dependencies {
     docs("androidx.versionedparcelable:versionedparcelable:1.1.1")
     docs("androidx.viewpager2:viewpager2:1.1.0-alpha01")
     docs("androidx.viewpager:viewpager:1.0.0")
-    docs("androidx.wear:wear:1.2.0-alpha03")
+    docs("androidx.wear:wear:1.2.0-alpha04")
     stubs(fileTree(dir: '../wear/wear_stubs/', include: ['com.google.android.wearable-stubs.jar']))
-    docs("androidx.wear:wear-complications-data:1.0.0-alpha03")
-    docs("androidx.wear:wear-complications-provider:1.0.0-alpha03")
-    docs("androidx.wear:wear-watchface:1.0.0-alpha03")
-    docs("androidx.wear:wear-watchface-client:1.0.0-alpha03")
-    docs("androidx.wear:wear-watchface-complications-rendering:1.0.0-alpha03")
-    docs("androidx.wear:wear-watchface-data:1.0.0-alpha03")
+    docs("androidx.wear:wear-complications-data:1.0.0-alpha04")
+    docs("androidx.wear:wear-complications-provider:1.0.0-alpha04")
+    docs("androidx.wear:wear-watchface:1.0.0-alpha04")
+    docs("androidx.wear:wear-watchface-client:1.0.0-alpha04")
+    docs("androidx.wear:wear-watchface-complications-rendering:1.0.0-alpha04")
+    docs("androidx.wear:wear-watchface-data:1.0.0-alpha04")
     samples("androidx.wear:wear-watchface-samples:1.0.0-alpha02")
-    docs("androidx.wear:wear-watchface-style:1.0.0-alpha03")
+    docs("androidx.wear:wear-watchface-style:1.0.0-alpha04")
     docs("androidx.wear:wear-input:1.0.0")
     docs("androidx.wear:wear-input-testing:1.0.0")
-    docs("androidx.webkit:webkit:1.4.0-rc02")
-    docs("androidx.window:window:1.0.0-alpha01")
+    docs("androidx.webkit:webkit:1.4.0")
+    docs("androidx.window:window:1.0.0-alpha02")
     stubs(fileTree(dir: '../window/stubs/', include: ['window-sidecar-release-0.1.0-alpha01.aar']))
     stubs(project(":window:window-extensions"))
     docs("androidx.work:work-gcm:2.5.0-beta02")
