--- a/core/core/build.gradle
+++ b/core/core/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     androidTestImplementation(TRUTH)
     androidTestImplementation(ESPRESSO_CORE, libs.exclude_for_espresso)
     androidTestImplementation(MOCKITO_CORE, libs.exclude_bytebuddy) // DexMaker has it"s own MockMaker
+    androidTestImplementation(MULTIDEX)
 
     // Including both dexmakers allows support for all API levels plus final mocking support on
     // API 28+. The implementation is swapped based on the finality of the mock type. This
@@ -68,6 +69,9 @@ android {
                 "mockito-extensions/org.mockito.plugins.MockMaker",
                 "mockito-extensions/org.mockito.plugins.StackTraceCleanerProvider"
         ]
+    }
+    defaultConfig {
+        multiDexEnabled = true
     }
 }
 
