Add androidx.compose.material:material-ripple to the docs build.grade
It should have been added in aosp/1524925

Test: gw bOS
Change-Id: I1ca8469ce38324da0ce3217a64fbda242470c7df

--- a/docs-public/build.gradle
+++ b/docs-public/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     docs("androidx.compose.material:material-icons-core:1.0.0-alpha09")
     samples("androidx.compose.material:material-icons-core-samples:1.0.0-alpha09")
     docs("androidx.compose.material:material-icons-extended:1.0.0-alpha09")
+    docs("androidx.compose.material:material-ripple:1.0.0-alpha09")
     samples("androidx.compose.material:material-samples:1.0.0-alpha09")
     docs("androidx.compose.runtime:runtime:1.0.0-alpha09")
     docs("androidx.compose.runtime:runtime-dispatch:1.0.0-alpha09")
