Add signature verifier to be used by AppAuthenticator
This commit adds a signature verifier that the AppAuthenticator can use
in a future commit to verify an app's signing identity against that
declared in the AppAuthenticator's XML config file.

Bug: 171453012
Test: AppAuthenticatorUtilsTest and AppSignatureVerifierTest
Change-Id: Ia1d9079f0eaa1ef2aad1e30733a85fe3e14005f7

--- a/security/security-app-authenticator/build.gradle
+++ b/security/security-app-authenticator/build.gradle
@@ -28,15 +28,27 @@ plugins {
 
 dependencies {
     api("androidx.annotation:annotation:1.1.0")
-
+    implementation(AUTO_VALUE_ANNOTATIONS)
+    annotationProcessor(AUTO_VALUE)
     implementation("androidx.collection:collection:1.1.0")
+
+    testImplementation("junit:junit:4.13")
+    testImplementation(ANDROIDX_TEST_EXT_JUNIT)
+    testImplementation(ANDROIDX_TEST_CORE)
+    testImplementation(ANDROIDX_TEST_RUNNER)
+    testImplementation(ANDROIDX_TEST_RULES)
+    testImplementation(MOCKITO_CORE)
+    testImplementation(ROBOLECTRIC)
 
     androidTestImplementation("junit:junit:4.13")
     androidTestImplementation(ANDROIDX_TEST_EXT_JUNIT)
     androidTestImplementation(ANDROIDX_TEST_CORE)
     androidTestImplementation(ANDROIDX_TEST_RUNNER)
     androidTestImplementation(ANDROIDX_TEST_RULES)
-    androidTestImplementation(MOCKITO_CORE)
+}
+
+android {
+    testOptions.unitTests.includeAndroidResources = true
 }
 
 androidx {
