Update testing docs snippets
Test: ./gradlew :compose:integration-tests:docs-snippets:ktlint

Change-Id: I96a1ee46717bbd97e13ff3c734974c2180ef8253

--- a/compose/integration-tests/docs-snippets/build.gradle
+++ b/compose/integration-tests/docs-snippets/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation(KOTLIN_STDLIB)
     implementation(KOTLIN_REFLECT)
     implementation(ANDROIDX_TEST_RULES)
+    implementation(ESPRESSO_CORE)
     implementation(JUNIT)
     implementation(TRUTH)
 }
