Depend on activity 1.2.0 in compose
Since we have already cut the release, updating compose to depend on the
stable version of activity.

RelNote: N/A
Test: ./gradlew bOS
Change-Id: I5e64b87332d504f13e0be8c74a7d1a41b1c7b270

--- a/compose/runtime/runtime/compose-runtime-benchmark/build.gradle
+++ b/compose/runtime/runtime/compose-runtime-benchmark/build.gradle
@@ -60,6 +60,6 @@ dependencies {
     androidTestImplementation(KOTLIN_STDLIB)
     androidTestImplementation(KOTLIN_REFLECT)
     androidTestImplementation(project(":benchmark:benchmark-junit4"))
-    androidTestImplementation "androidx.activity:activity:1.2.0-rc01"
+    androidTestImplementation "androidx.activity:activity:1.2.0"
     androidTestImplementation project(":activity:activity-compose")
 }
