--- a/compose/integration-tests/demos/common/build.gradle
+++ b/compose/integration-tests/demos/common/build.gradle
@@ -27,6 +27,6 @@ dependencies {
     kotlinPlugin projectOrArtifact(":compose:compiler:compiler")
     implementation(KOTLIN_STDLIB)
 
-    api "androidx.activity:activity:1.2.0-rc01"
+    api "androidx.activity:activity:1.2.0"
     implementation projectOrArtifact(":compose:runtime:runtime")
 }
