--- a/compose/integration-tests/demos/build.gradle
+++ b/compose/integration-tests/demos/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     implementation project(":compose:foundation:foundation-layout:integration-tests:foundation-layout-demos")
     implementation project(":compose:foundation:foundation:integration-tests:foundation-demos")
     implementation project(":compose:material:material:integration-tests:material-demos")
+    implementation project(":compose:material:material:integration-tests:material-catalog")
     implementation project(":compose:material:material:integration-tests:material-studies")
     implementation project(":navigation:navigation-compose:integration-tests:navigation-demos")
     implementation project(":compose:ui:ui:integration-tests:ui-demos")
