Update verifyDependencyVersions to understand multiplatform dependency configurations
Currently the task over-enforces because
multiplatform configurations put the platform
before the configuration, such as androidAndroidTest.

This breaks when you move compose to beta.

Also update the appcompat dependency to 1.3.0-beta01,
which matches the non-multiplatform dependency.

Test: ./gradlew verifyDependencyVersions -Pandroidx.compose.multiplatformEnabled=true
Change-Id: Id97fd858321a233a70eb9e34efc5ff8d28f585d2

--- a/compose/ui/ui/build.gradle
+++ b/compose/ui/ui/build.gradle
@@ -156,7 +156,7 @@ if(AndroidXUiPlugin.isMultiplatformEnabled(project)) {
                 // will not propagate ViewTree*Owners we are relying on and we will crash.
                 // TODO: remove these dependencies at some point: b/161814404
                 implementation "androidx.fragment:fragment:1.3.0"
-                implementation "androidx.appcompat:appcompat:1.3.0-alpha01"
+                implementation "androidx.appcompat:appcompat:1.3.0-beta01"
             }
 
             jvmMain.dependencies {
