Add snippets from Lists doc
Test: ./gradlew :compose:integration-tests:docs-snippets:ktlint
Change-Id: I677b75f25d576baf6ac1f27c287575567054b76e

--- a/compose/integration-tests/docs-snippets/build.gradle
+++ b/compose/integration-tests/docs-snippets/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation(project(":navigation:navigation-compose"))
     implementation(project(":activity:activity-compose"))
     implementation(project(":lifecycle:lifecycle-viewmodel-compose"))
+    implementation(project(":paging:paging-compose"))
 
     implementation(KOTLIN_STDLIB)
     implementation(KOTLIN_REFLECT)
