--- a/compose/material/material-icons-extended/build.gradle
+++ b/compose/material/material-icons-extended/build.gradle
@@ -56,6 +56,7 @@ dependencies {
         androidTestImplementation(project(":test-screenshot"))
         androidTestImplementation(project(":compose:ui:ui-test-junit4"))
         androidTestImplementation(project(":activity:activity-compose"))
+        androidTestImplementation("androidx.appcompat:appcompat:1.3.0-beta01")
     }
 }
 
@@ -81,6 +82,7 @@ if(AndroidXUiPlugin.isMultiplatformEnabled(project)) {
                 implementation(project(":test-screenshot"))
                 implementation(project(":compose:ui:ui-test-junit4"))
                 implementation(project(":activity:activity-compose"))
+                implementation("androidx.appcompat:appcompat:1.3.0-beta01")
 
                 implementation(ANDROIDX_TEST_RULES)
                 implementation(ANDROIDX_TEST_RUNNER)
