Add helper classes to avoid failing verification for AndroidPaint/RenderNodeLayer --Updated ui-graphics build.gradle to pull in DoNotInline annotation
Test: re-ran compose tests
Bug: 181333282
Change-Id: If2acffa2532cdcd353534e53dec85e419c67b12a

--- a/compose/ui/ui-graphics/build.gradle
+++ b/compose/ui/ui-graphics/build.gradle
@@ -37,7 +37,7 @@ if(!AndroidXUiPlugin.isMultiplatformEnabled(project)) {
          * corresponding block below
          */
 
-        api("androidx.annotation:annotation:1.1.0")
+        api("androidx.annotation:annotation:1.2.0-beta01")
         api(project(":compose:ui:ui-unit"))
 
         implementation(project(":compose:runtime:runtime"))
@@ -80,7 +80,7 @@ if(AndroidXUiPlugin.isMultiplatformEnabled(project)) {
             }
 
             androidMain.dependencies {
-                api("androidx.annotation:annotation:1.1.0")
+                api("androidx.annotation:annotation:1.2.0-beta01")
             }
 
             desktopMain.dependencies {
