Update LibraryGroups for Window
Extract window-extensions to its own groupId so that we can update the
version independently. This will be less confusing to OEMs who are the
actual consumers of the extensions.

Extract window-sidecar to its own groupId for similar versions as
extensions.

Merge all of the window module group so that we can use some
additional tooling around internal APIs. One example is using RestrictTo
with a LibraryGroup. This will allow us more flexibility when adding
data classes and infrastructure around overriding behavior for tests.

Move window extensions to beta so that we can use it in core library.
Make all window artifacts have the same library group.
Update the corresponding API files.
Update the gradle files so that all artifacts have the same version.

Relnote: Extract extensions
Bug: 198405125
Test: ./gradlew window:window:cAT
Test: ./gradlew window:window-java:cAT
Test: ./gradlew window:window-rxjava2:cAT
Test: ./gradlew window:window-rxjava3:cAT
Test: ./gradlew window:window-testing:cAT
Test: manual - run samples on a device with window-extensions
Change-Id: I25a5fda9e895d05c05bff1e11f3db6fed4bfa989

--- a/docs-tip-of-tree/build.gradle
+++ b/docs-tip-of-tree/build.gradle
@@ -292,8 +292,8 @@ dependencies {
     docs(project(":window:window-java"))
     docs(project(":window:window-rxjava2"))
     docs(project(":window:window-rxjava3"))
-    stubs(project(":window:window-sidecar"))
-    stubs(project(":window:window-extensions"))
+    stubs(project(":window:sidecar:sidecar"))
+    stubs(project(":window:extensions:extensions"))
     docs(project(":window:window-testing"))
     docs(project(":work:work-gcm"))
     docs(project(":work:work-multiprocess"))
