--- a/settings.gradle
+++ b/settings.gradle
@@ -719,12 +719,12 @@ includeProject(":wear:watchface:watchface-style", "wear/watchface/watchface-styl
 includeProject(":webkit:integration-tests:testapp", "webkit/integration-tests/testapp", [BuildType.MAIN])
 includeProject(":webkit:webkit", "webkit/webkit", [BuildType.MAIN])
 includeProject(":window:window", "window/window", [BuildType.MAIN, BuildType.FLAN])
-includeProject(":window:window-extensions", "window/window-extensions", [BuildType.MAIN, BuildType.FLAN])
+includeProject(":window:extensions:extensions", "window/extensions/extensions", [BuildType.MAIN, BuildType.FLAN])
+includeProject(":window:sidecar:sidecar", "window/sidecar/sidecar", [BuildType.MAIN, BuildType.FLAN])
 includeProject(":window:window-java", "window/window-java", [BuildType.MAIN])
 includeProject(":window:window-rxjava2", "window/window-rxjava2", [BuildType.MAIN])
 includeProject(":window:window-rxjava3", "window/window-rxjava3", [BuildType.MAIN])
 includeProject(":window:window-samples", "window/window-samples", [BuildType.MAIN, BuildType.FLAN])
-includeProject(":window:window-sidecar", "window/window-sidecar", [BuildType.MAIN, BuildType.FLAN])
 includeProject(":window:window-testing", "window/window-testing", [BuildType.MAIN, BuildType.FLAN])
 includeProject(":work:integration-tests:testapp", "work/integration-tests/testapp", [BuildType.MAIN])
 includeProject(":work:work-benchmark", "work/work-benchmark", [BuildType.MAIN])
