--- a/window/window/build.gradle
+++ b/window/window/build.gradle
@@ -50,7 +50,8 @@ dependencies {
     implementation("androidx.collection:collection:1.1.0")
     implementation("androidx.core:core:1.3.2")
 
-    compileOnly(project(":window:window-sidecar"))
+    compileOnly(project(":window:sidecar:sidecar"))
+    compileOnly(project(":window:extensions:extensions"))
 
     testImplementation(libs.testCore)
     testImplementation(libs.testRunner)
@@ -60,7 +61,8 @@ dependencies {
     testImplementation(libs.mockitoCore)
     testImplementation(libs.mockitoKotlin)
     testImplementation(libs.kotlinCoroutinesTest)
-    testImplementation(compileOnly(project(":window:window-sidecar")))
+    testImplementation(compileOnly(project(":window:sidecar:sidecar")))
+    testImplementation(compileOnly(project(":window:extensions:extensions")))
 
     androidTestImplementation(libs.testCore)
     androidTestImplementation(libs.testExtJunit)
@@ -72,8 +74,8 @@ dependencies {
     androidTestImplementation(libs.kotlinCoroutinesTest)
     androidTestImplementation(libs.multidex)
     androidTestImplementation(libs.truth)
-    androidTestImplementation(compileOnly(project(":window:window-extensions")))
-    androidTestImplementation(compileOnly(project(":window:window-sidecar")))
+    androidTestImplementation(compileOnly(project(":window:extensions:extensions")))
+    androidTestImplementation(compileOnly(project(":window:sidecar:sidecar")))
 
     samples(project(":window:window-samples"))
 }
@@ -82,7 +84,6 @@ androidx {
     name = "Jetpack WindowManager Library"
     publish = Publish.SNAPSHOT_AND_RELEASE
     mavenGroup = LibraryGroups.WINDOW
-    mavenVersion = LibraryVersions.WINDOW
     inceptionYear = "2020"
     description = "WindowManager Jetpack library. Currently only provides additional " +
             "functionality on foldable devices."
